# potential-train

./: .gitignore  .prettierignore  .prettierrc.toml  Cargo.toml  Jenkinsfile  README.md  bunfetcher.js  bunserver.js  eslint.config.js  index.html  package.json  rollup-plugin-subresource-integrity.js  vite.config.js
scripts/: bunfetcher.js  bunserver.js  rollup_subresource_cache.json  seed_sqlite_db.sh
scripts/subresource_integrity/: constants.js  index.js  utils.js
src/: App.vue  main.js  main.rs
src/address/: state.rs
src/analytics/: identity.rs  lib.rs  mod.rs
src/assets/css/: main.css
src/assets/css/elements/: default-styles.css  dropdown.css
src/assets/data/: fieldsWithErrors.json  formFields.json  postal_states.json
src/components/: HelloWorld.vue
src/components/calendar/: calendar-container.vue  index.vue
src/components/security/: recaptcha.vue
src/components/ui/: modal.vue  otp-input.vue  select-input.vue
src/core/: errorHandler.js  mod.rs
src/css/: main.css
src/css/elements/: default-styles.css
src/css/utilities/: shame.css
src/hooks/: calendar.js  calendar.vitest.js
src/plugins/: network.js
src/router/: index.js  routes.js
src/stores/: address.js  coa.js  config.js  errors.js  modal.js
src/utils/: index.js  security.js
src/utils/change-case/: baseCase.js  pascalCase.js
src/views/: home.vue
src/views/disclaimer/: index.vue
subresource_integrity/: constants.js  index.js  utils.js
tests/unit/store/: address.vitest.js  errors.test.js
tests/unit/utils/change-case/: baseCase.test.js
