[package]
name = "mgo-latest"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
env_logger = "0.9"
lazy_static = "1.4.0"
# futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20" # 0.21.0 blocked on sqlx sqlite update
# to allow automatic binding to latest version of sqlite swap the dependecies.
# rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite = "0.27" # 0.28.0 blocked on sqlx sqlite update
serde = { version = "1", features = ["derive"] }
serde_json = "1"

